centralize cache configuration