@@ -1,6 +1,7 @@
 package org.sagebionetworks.model.ad.api.next.configuration;
 
 import com.github.benmanes.caffeine.cache.Caffeine;
+import java.util.List;
 import org.springframework.cache.CacheManager;
 import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.cache.caffeine.CaffeineCacheManager;
@@ -9,8 +10,7 @@ import org.springframework.context.annotation.Configuration;
 
 /**
  * Cache configuration for the Model-AD API service.
- *
- * <p>Configures in-memory caching for comparison tool data queries to reduce MongoDB load and
+ * Configures in-memory caching for comparison tool data queries to reduce MongoDB load and
  * improve response times. Uses Caffeine cache for high-performance local caching.
  */
 @Configuration
@@ -24,15 +24,11 @@ public class CacheConfiguration {
   public CacheManager cacheManager() {
     CaffeineCacheManager cacheManager = new CaffeineCacheManager();
 
-    // Configure cache with expiration and size limits
-    cacheManager.setCaffeine(
-      Caffeine.newBuilder()
-        .maximumSize(1000) // Limit each cache to prevent memory issues
-        .recordStats()
-    ); // Enable cache statistics for monitoring
+    // Configure cache
+    cacheManager.setCaffeine(Caffeine.newBuilder().recordStats()); // Enable cache statistics for monitoring
 
     // Define the cache names used by query services
-    cacheManager.setCacheNames(java.util.Arrays.asList("diseaseCorrelation", "modelOverview"));
+    cacheManager.setCacheNames(List.of(CacheNames.DISEASE_CORRELATION, CacheNames.MODEL_OVERVIEW));
 
     return cacheManager;
   }
